--- a/website/CHANGES
+++ b/website/CHANGES
@@ -5,6 +5,134 @@
 
 Latest changes first.
 
+--- Di 23. Aug 01:16:54 CEST 2022
+Core GAP upgraded from 4.11.1 to 4.12.0
+New packages:
+    StandardFF Version 0.9.4
+    UGALY Version 4.0.3
+    classicpres Version 1.22
+    nofoma Version 1.0
+Upgraded packages (as distributed with GAP 4.12.0 plus upgraded AtlasRep):
+    4ti2Interface Version 2020.10-02 -> 2022.08-03
+    ACE Version 5.3 -> 5.5
+    ANUPQ Version 3.2.1 -> 3.2.6
+    Alnuth Version 3.1.2 -> 3.2.1
+    AtlasRep Version 2.1.0 -> 2.1.5
+    AutPGrp Version 1.10.2 -> 1.11
+    AutoDoc Version 2020.08.11 -> 2022.07.10
+    Automata Version 1.14 -> 1.15
+    Browse Version 1.8.11.2 -> 1.8.14
+    CAP Version 2020.10-01 -> 2022.08-05
+    CRIME Version 1.5 -> 1.6
+    CTblLib Version 1.3.1 -> 1.3.4
+    CaratInterface Version 2.3.3 -> 2.3.4
+    CddInterface Version 2020.06.24 -> 2022.08.11
+    Circle Version 1.6.3 -> 1.6.5
+    CoReLG Version 1.54 -> 1.56
+    Congruence Version 1.2.3 -> 1.2.4
+    Cryst Version 4.1.23 -> 4.1.25
+    CrystCat Version 1.1.9 -> 1.1.10
+    Cubefree Version 1.18 -> 1.19
+    DeepThought Version 1.0.2 -> 1.0.5
+    Digraphs Version 1.3.1 -> 1.5.3
+    Example Version 4.2.1 -> 4.3.2
+    ExamplesForHomalg Version 2020.10-02 -> 2022.08-02
+    FPLSA Version 1.2.4 -> 1.2.5
+    FR Version 2.4.6 -> 2.4.10
+    FinInG Version 1.4.1 -> 1.5
+    Forms Version 1.2.5 -> 1.2.8
+    GAPDoc Version 1.6.4 -> 1.6.6
+    GBNP Version 1.0.3 -> 1.0.5
+    GRAPE Version 4.8.3 -> 4.8.5
+    GUAVA Version 3.15 -> 3.16
+    Gauss Version 2020.10-02 -> 2022.08-04
+    GaussForHomalg Version 2020.10-02 -> 2022.08-02
+    GeneralizedMorphismsForCAP Version 2020.10-01 -> 2022.05-01
+    GradedModules Version 2020.10-02 -> 2022.08-02
+    GradedRingForHomalg Version 2020.10-02 -> 2022.08-02
+    Guarana Version 0.96.2 -> 0.96.3
+    HAP Version 1.29 -> 1.47
+    HAPcryst Version 0.1.13 -> 0.1.15
+    HomalgToCAS Version 2020.10-02 -> 2022.08-02
+    IO Version 4.7.0 -> 4.7.2
+    IO_ForHomalg Version 2020.10-02 -> 2022.08-03
+    IRREDSOL Version 1.4.1 -> 1.4.3
+    IntPic Version 0.2.4 -> 0.3.0
+    JupyterKernel Version 1.3 -> 1.4.1
+    JupyterViz Version 1.5.1 -> 1.5.6
+    LAGUNA Version 3.9.3 -> 3.9.5
+    LiePRing Version 1.9.2 -> 2.7
+    LieRing Version 2.4.1 -> 2.4.2
+    LinearAlgebraForCAP Version 2020.10-01 -> 2022.08-03
+    LocalizeRingForHomalg Version 2020.10-02 -> 2022.08-02
+    MapClass Version 1.4.4 -> 1.4.5
+    MatricesForHomalg Version 2020.10-04 -> 2022.08-02
+    ModIsom Version 2.5.1 -> 2.5.3
+    ModulePresentationsForCAP Version 2020.10-01 -> 2022.08-02
+    Modules Version 2020.10-02 -> 2022.08-03
+    MonoidalCategories Version 2020.10-01 -> 2022.08-03
+    Nilmat Version 1.4 -> 1.4.2
+    NoCK Version 1.4 -> 1.5
+    NormalizInterface Version 1.1.0 -> 1.3.4
+    NumericalSgps Version 1.2.2 -> 1.3.1
+    OpenMath Version 11.5.0 -> 11.5.1
+    PackageManager Version 1.1 -> 1.3
+    Polenta Version 1.3.9 -> 1.3.10
+    PrimGrp Version 3.4.1 -> 3.4.2
+    QPA Version 1.31 -> 1.34
+    QuaGroup Version 1.8.2 -> 1.8.3
+    RCWA Version 4.6.4 -> 4.7.0
+    RDS Version 1.7 -> 1.8
+    RadiRoot Version 2.8 -> 2.9
+    RepnDecomp Version 1.1.0 -> 1.2.1
+    ResClasses Version 4.7.2 -> 4.7.3
+    RingsForHomalg Version 2020.11-01 -> 2022.08-03
+    SCO Version 2020.10-02 -> 2022.08-02
+    SONATA Version 2.9.1 -> 2.9.4
+    Semigroups Version 3.4.0 -> 5.0.2
+    SglPPow Version 2.1 -> 2.2
+    SgpViz Version 0.999.4 -> 0.999.5
+    SmallGrp Version 1.4.2 -> 1.5
+    Smallsemi Version 0.6.12 -> 0.6.13
+    Sophus Version 1.24 -> 1.27
+    SymbCompCC Version 1.3.1 -> 1.3.2
+    Thelma Version 1.02 -> 1.3
+    ToolsForHomalg Version 2020.10-03 -> 2022.08-02
+    ToricVarieties Version 2021.01.12 -> 2022.07.13
+    TransGrp Version 3.0 -> 3.6.3
+    Unipot Version 1.4 -> 1.5
+    UnitLib Version 4.0.0 -> 4.1.0
+    Wedderga Version 4.10.0 -> 4.10.2
+    XMod Version 2.82 -> 2.88
+    XModAlg Version 1.18 -> 1.22
+    YangBaxter Version 0.9.0 -> 0.10.1
+    ZeroMQInterface Version 0.12 -> 0.14
+    cohomolo Version 1.6.8 -> 1.6.10
+    curlInterface Version 2.2.1 -> 2.2.3
+    cvec Version 2.7.4 -> 2.7.6
+    datastructures Version 0.2.5 -> 0.2.7
+    ferret Version 1.0.3 -> 1.0.8
+    float Version 0.9.1 -> 1.0.3
+    genss Version 1.6.6 -> 1.6.7
+    groupoids Version 1.68 -> 1.71
+    homalg Version 2020.10-02 -> 2022.08-03
+    idrel Version 2.43 -> 2.44
+    images Version 1.3.0 -> 1.3.1
+    json Version 2.0.2 -> 2.1.0
+    kan Version 1.32 -> 1.34
+    loops Version 3.4.1 -> 3.4.2
+    lpres Version 1.0.1 -> 1.0.3
+    matgrp Version 0.64 -> 0.70
+    nq Version 2.5.4 -> 2.5.8
+    orb Version 4.8.3 -> 4.8.5
+    permut Version 2.0.3 -> 2.0.4
+    polymaking Version 0.8.2 -> 0.8.6
+    profiling Version 2.3 -> 2.5.0
+    simpcomp Version 2.1.10 -> 2.1.14
+    utils Version 0.69 -> 0.76
+    uuid Version 0.6 -> 0.7
+    walrus Version 0.999 -> 0.9991
+
 --- Wed Mar 3 15:08:07 CET 2021
 Core GAP upgraded from 4.11.0 to 4.11.1
 Removed packages:
